ingress-deployments/nginx-ingresses/app.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: app-v1-app
  labels:
    app: app-v1
spec:
  containers:
  - name: app-v1
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text={ \"version\": \"1\" }"
---
kind: Service
apiVersion: v1
metadata:
  name: app-v1-service
spec:
  selector:
    app: app-v1
  ports:
  # Default port used by the image
  - port: 5678
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-v1-ingress
  annotations:
          #    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.class: "traefik"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /app
        backend:
          serviceName: app-v1-service
          servicePort: 5678
