ingress-deployments/nginx-ingresses/example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    #    kubernetes.io/ingress.class: nginx
    #    traefik.frontend.passHostHeader: "true"          
          #    kubernetes.io/ingress.class: nginx
          #    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: home-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
         - backend:
             serviceName: cheddar
             servicePort: 80
           path: /
